k8s/api1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: api1
  name: api1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api1
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/eval-dev-service-cloud-default: "true"
        io.kompose.service: api1
    spec:
      containers:
        - env:
            - name: API2_URL
              value: http://api2:3001
          image: maswap/api1:latest
          name: api1
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
