k8s/api2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: api2
  name: api2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api2
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/eval-dev-service-cloud-default: "true"
        io.kompose.service: api2
    spec:
      containers:
        - image: maswap/api2:latest
          name: api2
          ports:
            - containerPort: 3001
              hostPort: 3001
              protocol: TCP
      restartPolicy: Always
