k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: monapi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api1-service
                port:
                  number: 3000
